--- a/about/index.html
+++ b/about/index.html
@@ -126,7 +126,7 @@
 <h3 id="our-vision">Our Vision</h3>
 <p>Our vision is to provide a great and new experience for SAP Applications system administrators, especially for the ones transitioning to Linux and public clouds.</p>
 <h3 id="our-mission">Our Mission</h3>
-<p>Our mission is to deliver, via a new cloud-native web console, an easy-to-use solution focused on simplifying and automating the SAP Applications routines a sysadm needs to perform when using a Linux operating system.</p>
+<p>Our mission is to deliver, via a new cloud-native web console, an easy-to-use solution focused on simplifying and automating the SAP Applications routines a System Administrator needs to perform when using a Linux operating system.</p>
 <p>Our goal is to accomplish that using modern technologies fostering a &ldquo;maintenance-free&rdquo; infrastructure based on modern concepts like automated service discovery and automated operations, observability, configuration-as-code, among others.</p>
 
         </section>
