Text revision for Home and About page

--- a/about/index.html
+++ b/about/index.html
@@ -121,12 +121,12 @@
         <div class="divider"></div>
         
         <section class="section content has-text-justified">
-          <p>Trento is a new open-source cloud-native web console aiming to improve the life of SAP Applications administrators.</p>
-<p>SAP Applications support most of the biggest mission-critical systems in the world, which makes it extremely important and complex. Also, the increasing pace of new technological trends adoption requires modern solutions to support the speed imposed by the digital transformation era.</p>
+          <p>Trento is a new open-source cloud-native web console aiming to improve the workday of SAP Applications administrators.</p>
+<p>SAP Applications represent most of the biggest mission-critical systems in the world, which makes it extremely important and complex. Also, the increasing pace of new technological trends adoption requires modern solutions to support the speed imposed by the digital transformation era.</p>
 <h3 id="our-vision">Our Vision</h3>
-<p>Our vision is to provide a great and new experience for SAP Applications system administrators, especially for the ones transitioning to Linux and public clouds.</p>
+<p>Our vision is to provide a great and simplified experience for SAP Applications system administrators, especially for the ones transitioning to Linux and public clouds.</p>
 <h3 id="our-mission">Our Mission</h3>
-<p>Our mission is to deliver, via a new cloud-native web console, an easy-to-use solution focused on simplifying and automating the SAP Applications routines a System Administrator needs to perform when using a Linux operating system.</p>
+<p>Our mission is to deliver, via a cloud-native web console, an easy-to-use solution focused on simplifying and automating the SAP Applications Operating system routines a sysadm needs to perform when using a Linux operating system.</p>
 <p>Our goal is to accomplish that using modern technologies fostering a &ldquo;maintenance-free&rdquo; infrastructure based on modern concepts like automated service discovery and automated operations, observability, configuration-as-code, among others.</p>
 
         </section>
