--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="columns is-vcentered">
             <div class="column is-5 is-offset-1 landing-caption">
                 <h1 class="title is-1 is-bold is-spaced">Trento Console for SAP Applications</h1><h2 class="subtitle is-5 is-muted">
-                An open cloud-native web console improving on the life of SAP Applications administrators.
+                A new open-source cloud-native web console aiming to improve the workday of SAP Applications administrators
 
                 </h2>
             </div>
