--- a/about/index.html
+++ b/about/index.html
@@ -92,21 +92,17 @@
         <h1 class="title is-2 section-title">About</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
-        
-        <section class="section content has-text-justified">
-          <p>Trento is a new open-source cloud-native web console aiming to improve the workday of SAP Applications administrators.</p>
+        <section class="section content has-text-justified"><p>Trento is a new open-source cloud-native web console aiming to improve the workday of SAP Applications administrators.</p>
 <p>SAP Applications represent most of the biggest mission-critical systems in the world, which makes it extremely important and complex. Also, the increasing pace of new technological trends adoption requires modern solutions to support the speed imposed by the digital transformation era.</p>
 <h3 id="our-vision">Our Vision</h3>
 <p>Our vision is to provide a great and simplified experience for SAP Applications system administrators, especially for the ones transitioning to Linux and public clouds.</p>
 <h3 id="our-mission">Our Mission</h3>
 <p>Our mission is to deliver, via a cloud-native web console, an easy-to-use solution focused on simplifying and automating the SAP Applications Operating system routines a sysadm needs to perform when using a Linux operating system.</p>
 <p>Our goal is to accomplish that using modern technologies fostering a &ldquo;maintenance-free&rdquo; infrastructure based on modern concepts like automated service discovery and automated operations, observability, configuration-as-code, among others.</p>
-
-        </section>
+</section>
       </div>
     </div>
-  </div>  
-  </section>
+  </div></section>
 <footer class="footer footer-dark">
   <div class="container">
     <div class="columns">
@@ -212,23 +208,7 @@
 <script src="/js/jquery-2.2.4.893e90f6230962e42231635df650f20544ad22affc3ee396df768eaa6bc5a6a2.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="></script>
   <script src="/js/feather.4.22.0.1ab07abeb9975f283f6b5f29451981be680fbf77ea778f991d457511d210476a.js" integrity="sha256-GrB6vrmXXyg/a18pRRmBvmgPv3fqd4&#43;ZHUV1EdIQR2o="></script>
   <script src="/js/modernizr-3.6.0.e013a1e54e3c19d83537ba42b900d34451e5e4b2e789be27a02ac9b152edb741.js" integrity="sha256-4BOh5U48Gdg1N7pCuQDTRFHl5LLnib4noCrJsVLtt0E="></script>
-  <script src="/js/refresh.62c1a9b7d85bcf4d944cd585a01dfa8fb15112a7d2cf9fb819db20493bfe7484.js" integrity="sha256-YsGpt9hbz02UTNWFoB36j7FREqfSz5&#43;4GdsgSTv&#43;dIQ="></script><script>
-  window.MathJax = {
-    loader: {
-      load: ['core', 'input/tex-base', 'output/chtml'],  
-      source: {
-        'core': '\/js\/mathjax\/core.d48fedf25c74c54fa6bf79646de92b02155872bdc4f5f7d0bbfc662523d8b4f5.js',
-        'input/tex-base': '\/js\/mathjax\/tex-base.1b68b8741dfc54e8f7222f88bea8ffcfc57ac54b2a2d8f4edf6800aa44d49441.js',
-        'output/chtml': '\/js\/mathjax\/chtml.926cd166e0f8c1f8a566a718d60c9c58a2b7142b156d30d5f02cec7c3b0ad60a.js',
-        'output/chtml/fonts/tex': '\/js\/mathjax\/tex_out.b8b2bb939c0dae84bf1390bfe6d32af13e83f647cdac01d544d2a7a517477e9d.js'
-      },
-    },
-    chtml: {
-      fontURL: '/fonts' 
-    },
-  };
-</script><script src="/js/mathjax/startup.234a2513e6bdbc1eee06ca19abceca30fe4034e82afb373c08274c1ba2feb1a6.js" integrity="sha256-I0olE&#43;a9vB7uBsoZq87KMP5ANOgq&#43;zc8CCdMG6L&#43;saY="></script>
-  <script src="/js/highlight.9.18.1.b1c58829c55afcc1f568022af4b08ed8976da404d2990b7535bd8e19c0e3310c.js" integrity="sha256-scWIKcVa/MH1aAIq9LCO2JdtpATSmQt1Nb2OGcDjMQw="></script>
+  <script src="/js/refresh.62c1a9b7d85bcf4d944cd585a01dfa8fb15112a7d2cf9fb819db20493bfe7484.js" integrity="sha256-YsGpt9hbz02UTNWFoB36j7FREqfSz5&#43;4GdsgSTv&#43;dIQ="></script><script src="/js/highlight.9.18.1.b1c58829c55afcc1f568022af4b08ed8976da404d2990b7535bd8e19c0e3310c.js" integrity="sha256-scWIKcVa/MH1aAIq9LCO2JdtpATSmQt1Nb2OGcDjMQw="></script>
   <script src="/js/highlightjs-line-numbers.2.7.0.min.ddfe282e07b7ec1ed069c23f92c7c8216ddb3f1879c4e962d37fd52adbd15a05.js" integrity="sha256-3f4oLge37B7QacI/ksfIIW3bPxh5xOli03/VKtvRWgU="></script><script>
   hljs.initHighlightingOnLoad();
   hljs.initLineNumbersOnLoad();
@@ -237,7 +217,5 @@
       hljs.highlightBlock(block);
     });
   });
-</script>
-
-</body>
+</script></body>
 </html>
