--- a/releases/2.0.0/index.html
+++ b/releases/2.0.0/index.html
@@ -86,15 +86,13 @@
     </div>
   </nav>
 <section class="section is-medium">
-    <div class="container blog">
-      <div class="columns is-centered">
-        <div class="column is-three-fifths is-centered-tablet-portrait">
-          <h1 class="title is-2 section-title">Announcing Trento Version 2.0.0</h1>
-          <h5 class="subtitle is-5 is-muted"></h5>
-          <div class="divider"></div>
-          
-          <section class="section content has-text-justified">
-            <p><img src="trento-release-2-0-0-hero@2x.png" alt="Trento Release Version 2.0.0"></p>
+  <div class="container blog">
+    <div class="columns is-centered">
+      <div class="column is-three-fifths is-centered-tablet-portrait">
+        <h1 class="title is-2 section-title">Announcing Trento Version 2.0.0</h1>
+        <h5 class="subtitle is-5 is-muted"></h5>
+        <div class="divider"></div>
+        <section class="section content has-text-justified"><p><img src="trento-release-2-0-0-hero@2x.png" alt="Trento Release Version 2.0.0"></p>
 <p>Available beginning of May’23, Trento 2.0.0 brings major changes to the architecture of the solution and therefore it will be <strong>necessary an update on both the server</strong> and the agents for those customers that are already using Trento.</p>
 <p>The main change in the new version is a brand-new SSH-less checks engine, but it also adds VMware to the list of known platforms and provides versioned external APIs for both the web and engine components.</p>
 <p><img src="trento-checks-engine@2x.png" alt="Trento Checks Engine"></p>
@@ -153,12 +151,10 @@
 <p><img src="trento-external-api@2x.png" alt="Trento External APIs"></p>
 <h1 id="are-you-wanting-to-upgrade-or-try-out-trento">Are you wanting to upgrade or try out Trento?</h1>
 <p>Follow the <a href="https://documentation.suse.com/sles-sap/trento/single-html/SLES-SAP-trento/index.html" title="Getting started with Trento Premium">instructions in our documentation</a> to get started.</p>
-
-          </section>
-        </div>
+</section>
       </div>
-    </div>  
-    </section><footer class="footer footer-dark">
+    </div>
+  </div></section><footer class="footer footer-dark">
   <div class="container">
     <div class="columns">
       <div class="column">
@@ -263,23 +259,7 @@
 <script src="/js/jquery-2.2.4.893e90f6230962e42231635df650f20544ad22affc3ee396df768eaa6bc5a6a2.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="></script>
   <script src="/js/feather.4.22.0.1ab07abeb9975f283f6b5f29451981be680fbf77ea778f991d457511d210476a.js" integrity="sha256-GrB6vrmXXyg/a18pRRmBvmgPv3fqd4&#43;ZHUV1EdIQR2o="></script>
   <script src="/js/modernizr-3.6.0.e013a1e54e3c19d83537ba42b900d34451e5e4b2e789be27a02ac9b152edb741.js" integrity="sha256-4BOh5U48Gdg1N7pCuQDTRFHl5LLnib4noCrJsVLtt0E="></script>
-  <script src="/js/refresh.62c1a9b7d85bcf4d944cd585a01dfa8fb15112a7d2cf9fb819db20493bfe7484.js" integrity="sha256-YsGpt9hbz02UTNWFoB36j7FREqfSz5&#43;4GdsgSTv&#43;dIQ="></script><script>
-  window.MathJax = {
-    loader: {
-      load: ['core', 'input/tex-base', 'output/chtml'],  
-      source: {
-        'core': '\/js\/mathjax\/core.d48fedf25c74c54fa6bf79646de92b02155872bdc4f5f7d0bbfc662523d8b4f5.js',
-        'input/tex-base': '\/js\/mathjax\/tex-base.1b68b8741dfc54e8f7222f88bea8ffcfc57ac54b2a2d8f4edf6800aa44d49441.js',
-        'output/chtml': '\/js\/mathjax\/chtml.926cd166e0f8c1f8a566a718d60c9c58a2b7142b156d30d5f02cec7c3b0ad60a.js',
-        'output/chtml/fonts/tex': '\/js\/mathjax\/tex_out.b8b2bb939c0dae84bf1390bfe6d32af13e83f647cdac01d544d2a7a517477e9d.js'
-      },
-    },
-    chtml: {
-      fontURL: '/fonts' 
-    },
-  };
-</script><script src="/js/mathjax/startup.234a2513e6bdbc1eee06ca19abceca30fe4034e82afb373c08274c1ba2feb1a6.js" integrity="sha256-I0olE&#43;a9vB7uBsoZq87KMP5ANOgq&#43;zc8CCdMG6L&#43;saY="></script>
-  <script src="/js/highlight.9.18.1.b1c58829c55afcc1f568022af4b08ed8976da404d2990b7535bd8e19c0e3310c.js" integrity="sha256-scWIKcVa/MH1aAIq9LCO2JdtpATSmQt1Nb2OGcDjMQw="></script>
+  <script src="/js/refresh.62c1a9b7d85bcf4d944cd585a01dfa8fb15112a7d2cf9fb819db20493bfe7484.js" integrity="sha256-YsGpt9hbz02UTNWFoB36j7FREqfSz5&#43;4GdsgSTv&#43;dIQ="></script><script src="/js/highlight.9.18.1.b1c58829c55afcc1f568022af4b08ed8976da404d2990b7535bd8e19c0e3310c.js" integrity="sha256-scWIKcVa/MH1aAIq9LCO2JdtpATSmQt1Nb2OGcDjMQw="></script>
   <script src="/js/highlightjs-line-numbers.2.7.0.min.ddfe282e07b7ec1ed069c23f92c7c8216ddb3f1879c4e962d37fd52adbd15a05.js" integrity="sha256-3f4oLge37B7QacI/ksfIIW3bPxh5xOli03/VKtvRWgU="></script><script>
   hljs.initHighlightingOnLoad();
   hljs.initLineNumbersOnLoad();
@@ -288,7 +268,5 @@
       hljs.highlightBlock(block);
     });
   });
-</script>
-
-</body>
+</script></body>
 </html>
