reword about page intro 53ed1de2ccfb4faadaf93bf024bc786abf6faaa4

--- a/about/index.html
+++ b/about/index.html
@@ -93,8 +93,8 @@
         <h1 class="title is-2 section-title">About</h1>
         <h5 class="subtitle is-5 is-muted"></h5>
         <div class="divider"></div>
-        <section class="section content has-text-justified"><p>SAP Applications represent most of the biggest mission-critical systems in the world, which makes it extremely important and complex. Also, the increasing pace of new technological trends adoption requires modern solutions to support the speed imposed by the digital transformation era.</p>
-<p>The Trento project was conceived to address this complexity and abstract the challenges of operating SAP workloads away from sensitive Operative System tasks.</p>
+        <section class="section content has-text-justified"><p>SAP Applications represent most of the biggest mission-critical systems in the world, which makes them extremely important while also being quite complex. Also, the increasing pace of new technological trends adoption requires modern solutions to support the speed imposed by the digital transformation era.</p>
+<p>The Trento project was conceived to address this complexity and abstract away the challenges of operating SAP workloads from sensitive and error-prone Operative System tasks.</p>
 <h3 id="our-vision">Our Vision</h3>
 <p>Our vision is to provide a great and simplified experience for SAP Applications system administrators, especially for the ones transitioning to Linux and public clouds.</p>
 <h3 id="our-mission">Our Mission</h3>
